--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ configurations {
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://repo.maven.apache.org/maven2"
+    }
 }
 
 dependencies {
