--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:6.2.20.Final'
     implementation 'javax.xml.bind:jaxb-api:2.3.0'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation group: 'org.yaml', name: 'snakeyaml', version: '2.2'
+
 }
 
 tasks.named('test') {
