--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,7 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:6.2.20.Final'
     implementation 'javax.xml.bind:jaxb-api:2.3.0'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-    implementation group: 'org.yaml', name: 'snakeyaml', version: '2.2'
-
+    implementation 'org.yaml:snakeyaml:2.3'
 }
 
 tasks.named('test') {
