--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,6 @@ jobs:
       POSTGRES_DB: pb_names
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      RAILS_ENV: test
       DATABASE_URL: "postgres://postgres:postgres@localhost:5432/pb_names"
     steps:
       - name: Install Java
@@ -30,11 +29,9 @@ jobs:
           java-version: 21
           distribution: 'adopt'
       - name: Set up database schema
-        run: bin/postgres db:schema:load
-      - name: Run tests
-        run: |
-          bundle exec rake db:drop db:create db:migrate db:seed;
-          bin/rake test;
+        run: db:schema:load
+      - name: Maven Package
+        run: mvn -B clean package
 
   deploy:
     needs: test
