--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
         with:
           java-version: 21
           distribution: 'adopt'
-      - name: Maven Package
-        run: mvn -B clean package
+      - name: Run tests
+        run: ./gradlew test
 
   deploy:
     needs: test
