--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,5 @@ jobs:
           command: |
             cd ${{ secrets.PROJECT_FOLDER }};
             sh stop.sh
+            sleep 10
             sh start.sh master DB_USERNAME=pb_names DB_PASSWORD=postgres DB_NAME=postgres DB_PORT=5555 APP_PORT=8099
