--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,11 +48,11 @@ jobs:
           java-version: 21
           distribution: 'adopt'
       - name: Run command on remote server
-        uses: D3rHase/ssh-command-action@v0.2.2
+        uses: D3rHase/ssh-command-action@latest
         with:
           host: ${{secrets.SSH_HOST}}
           user: ${{secrets.SSH_USER}}
-          private_key: ${{secrets.SSH_PRIVATE_KEY}}
+          private_key: ${{secrets.PRIVATE_KEY}}
           command: |
             cd ${{ secrets.PROJECT_FOLDER }};
             sh stop.sh
