--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'javax.xml.bind:jaxb-api:2.3.0'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'org.yaml:snakeyaml:2.3'
+    implementation 'org.jsoup:jsoup:1.18.1'
 }
 
 tasks.named('test') {
