--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -22,5 +22,10 @@ holidays:
   url: https://isdayoff.ru/
 
 scheduledShuffles:
-  weekend: '0 45 10 * * 1,2,4,5'
-  wednesday: '0 45 10 * * 3'
+  weekend: '0 45 10 * * 1,2,3,4,5'
+
+scheduledHolidays:
+  weekend: '0 55 10 * * 1,2,3,4,5'
+
+scheduledGoodMorning:
+  weekend: '0 30 09 * * 1,2,3,4,5'
