--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'org.yaml:snakeyaml:2.3'
     implementation 'org.jsoup:jsoup:1.18.1'
+    implementation 'io.github.cdimascio:dotenv-java:3.0.2'
 }
 
 tasks.named('test') {
