fix bot creds security

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       DB_HOST: bot-db
       DB_PORT: 5432
       APP_PORT: ${APP_PORT:?appPortNotProvided}
+      BOT_USERNAME: ${BOT_USERNAME}
+      BOT_TOKEN: ${BOT_TOKEN}
+      ADMINS: ${ADMINS}
     restart: unless-stopped
   bot-db:
     container_name: pb-bot-db
